--- a/symfony/src/BW/UserBundle/Resources/config/doctrine/User.orm.yml
+++ b/symfony/src/BW/UserBundle/Resources/config/doctrine/User.orm.yml
@@ -23,4 +23,8 @@ BW\UserBundle\Entity\User:
         isActive:
             column: is_active
             type: boolean
+    manyToMany:
+        roles:
+            targetEntity: BW\UserBundle\Entity\Role
+            inversedBy: users
     lifecycleCallbacks: {  }
