--- a/symfony/app/config/security.yml
+++ b/symfony/app/config/security.yml
@@ -2,7 +2,9 @@ security:
     encoders:
 #        Symfony\Component\Security\Core\User\User: plaintext
         BW\UserBundle\Entity\User:
-            algorithm: bcrypt
+            algorithm:        sha1
+            encode_as_base64: false
+            iterations:       1
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
