Add profile & Resource CRUD

--- a/symfony/src/BW/BlogBundle/Resources/config/doctrine/Resource.orm.yml
+++ b/symfony/src/BW/BlogBundle/Resources/config/doctrine/Resource.orm.yml
@@ -1,6 +1,6 @@
 BW\BlogBundle\Entity\Resource:
     type: entity
-    table: null
+    table: resources
     repositoryClass: BW\BlogBundle\Entity\ResourceRepository
     id:
         id:
