--- a/symfony/src/BW/BlogBundle/Resources/config/doctrine/Tag.orm.yml
+++ b/symfony/src/BW/BlogBundle/Resources/config/doctrine/Tag.orm.yml
@@ -1,6 +1,6 @@
 BW\BlogBundle\Entity\Tag:
     type: entity
-    table: null
+    table: tags
     repositoryClass: BW\BlogBundle\Entity\TagRepository
     id:
         id:
