--- a/symfony/src/BW/BlogBundle/Resources/config/routing.yml
+++ b/symfony/src/BW/BlogBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-bw_blog_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: BWBlogBundle:Default:index }
+bw_blog_bundle_resource:
+    resource: "@BWBlogBundle/Resources/config/routing/resource.yml"
+    prefix:   /resource
