--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ php:
   - 5.4
   - 5.5
 
-before_script: composer install -n
-
-script: 
+before_script: 
   - cd symfony
-  - phpunit -c app
+  - composer install -n
+
+script: phpunit -c app
