Develop tags for Resource entity

--- a/symfony/src/BW/BlogBundle/Resources/config/doctrine/Tag.orm.yml
+++ b/symfony/src/BW/BlogBundle/Resources/config/doctrine/Tag.orm.yml
@@ -12,4 +12,8 @@ BW\BlogBundle\Entity\Tag:
         name:
             type: string
             length: 255
+    manyToMany:
+        resources:
+            targetEntity: BW\BlogBundle\Entity\Resource
+            mappedBy: tags
     lifecycleCallbacks: {  }
