--- a/symfony/src/BW/BlogBundle/Resources/config/doctrine/Resource.orm.yml
+++ b/symfony/src/BW/BlogBundle/Resources/config/doctrine/Resource.orm.yml
@@ -26,4 +26,8 @@ BW\BlogBundle\Entity\Resource:
             type: datetime
         updated:
             type: datetime
+    manyToMany:
+        tags:
+            targetEntity: BW\BlogBundle\Entity\Tag
+            inversedBy: resources
     lifecycleCallbacks: {  }
