--- a/symfony/src/BW/UserBundle/Resources/config/doctrine/User.orm.yml
+++ b/symfony/src/BW/UserBundle/Resources/config/doctrine/User.orm.yml
@@ -30,6 +30,10 @@ BW\UserBundle\Entity\User:
         profile:
             targetEntity: BW\UserBundle\Entity\Profile
             mappedBy: user
+    oneToMany:
+        resources:
+            targetEntity: BW\BlogBundle\Entity\Resource
+            mappedBy: user
     manyToMany:
         roles:
             targetEntity: BW\UserBundle\Entity\Role
