--- a/php-symfony-1/src/BU/BlogBundle/Resources/config/services.yml
+++ b/php-symfony-1/src/BU/BlogBundle/Resources/config/services.yml
@@ -8,7 +8,7 @@ services:
             - [setLowerCase, [true]]
 
     bu_blog.event_subscriber.slugger:
-        class: BU\BlogBundle\EventSubscriber\SluggerEventSubscriber
+        class: BU\BlogBundle\EventSubscriber\SluggerSubscriber
         arguments: ['@slugger']
         tags:
             - { name: doctrine.event_subscriber }
