Make not required converting to lowercase

--- a/php-symfony-1/src/BU/BlogBundle/Resources/config/services.yml
+++ b/php-symfony-1/src/BU/BlogBundle/Resources/config/services.yml
@@ -8,6 +8,7 @@ services:
             - [setLowerCase, [true]]
 
     bu_blog.event_subscriber.slugger:
+        public: false
         class: BU\BlogBundle\EventSubscriber\SluggerSubscriber
         arguments: ['@slugger']
         tags:
