Create App bundle

--- a/php-symfony-1/app/config/routing.yml
+++ b/php-symfony-1/app/config/routing.yml
@@ -3,3 +3,7 @@ bu_blog:
     type:     annotation
     prefix:   /
 
+bu_app:
+    resource: "@AppBundle/Controller/"
+    type:     annotation
+    prefix:   /
