Add project bundle with few entities

--- a/php-symfony-1/app/config/routing.yml
+++ b/php-symfony-1/app/config/routing.yml
@@ -1,3 +1,8 @@
+bu_project:
+    resource: "@BUProjectBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 bu_blog:
     resource: "@BUBlogBundle/Controller/"
     type:     annotation
